<resources>
    <string name="app_name">Auto Purchase</string>
    <string name="action_settings">Settings</string>

    <!-- Input labels for input fields -->
    <string name="title_activity_main">Car Dealership</string>
    <string name="instruction">Enter car purchase information</string>
    <string name="dollar_sign">$</string>
    <string name="car_price">What is the price of your car?</string>
    <string name="down_payment">What is your cash down payment?</string>
    <string name="loan_term">Choose your loan term</string>
    <string name="years2">2 years</string>
    <string name="years3">3 years</string>
    <string name="years4">4 years</string>
    <string name="loan_summary">Your Loan Summary</string>
    <string name="generate_btn">Loan Report</string>
    <string name="go_date_entry">Return to Data Entry</string>
    
    <!-- Report labels -->
    <string name="report_line1">\n\t\t\t<b>Monthly Payment: </b>$</string>
    <string name="report_line2">\nNOTE: </string>
    <string name="report_line3">\n1. Loan information is made
        available by Tom\'s Car Dealership. </string>
    <string name="report_line4">\n2. A sales tax rate of 7% is
        required in the state of California. </string>
    <string name="report_line5">\n3. Vehicles are financed at
        an annual interest rate of 9%. \n\n</string>

    <string name="report_line6">Car sticker price: </string>
    <string name="report_line7">You will put down: </string>
    <string name="report_line8">Loan Term is </string>
    <string name="report_line9">Taxed Amount: </string>
    <string name="report_line10">Your Cost: </string>
    <string name="report_line11">Borrowed Amount: </string>
    <string name="report_line12">Interest Amount: </string>

</resources>
